# clickhouse-optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  checkpoint  pyproject.toml
.claude/: settings.local.json
src/clickhouse_optimizer/: __init__.py  cli.py  optimizer.py  settings.py
